--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    height: 100vh;
+    overflow: hidden;
+    padding: 0;
+}
+
+#root {
+    height: 100%;
+}
