--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,11 +3,15 @@
 @tailwind utilities;
 
 body {
-    height: 100vh;
-    overflow: hidden;
-    padding: 0;
+  height: 100vh;
+  overflow: hidden;
+  padding: 0;
 }
 
 #root {
-    height: 100%;
+  height: 100%;
+}
+
+.gutter-stable {
+    scrollbar-gutter: stable;
 }
